# OneDrive-Crypto-Uploader

./: .gitignore  CMakeLists.txt  README.md  appconfig.example.json
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
src/auth/: AuthManager.cpp  AuthManager.h
src/crypto/: CryptoEngine.cpp  CryptoEngine.h  OdencFormat.cpp  OdencFormat.h
src/graph/: GraphClient.cpp  GraphClient.h
src/ui/: MainWindow.cpp  MainWindow.h
src/util/: JsonConfig.cpp  JsonConfig.h  SecureZero.cpp  SecureZero.h
tests/: test_crypto.cpp  test_format.cpp  test_graph_mock.cpp  test_gui_smoke.cpp  test_runner.cpp
